load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "admission.go",
        "controller.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/orchestration",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/admission:go_default_library",
        "//pkg/apis/orchestration/meta:go_default_library",
        "//pkg/apis/orchestration/v1:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/k8s/updater:go_default_library",
        "//pkg/orchestration/client/typed/orchestration/v1:go_default_library",
        "//pkg/orchestration/wiring:go_default_library",
        "//pkg/util/layers:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/apis/condition/v1:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/apis/smith/v1:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/client/clientset_generated/clientset/typed/smith/v1:go_default_library",
        "//vendor/github.com/ghodss/yaml:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/admission/v1beta1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["controller_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//:go_default_library",
        "//pkg/apis/orchestration/v1:go_default_library",
        "//pkg/orchestration/client/fake:go_default_library",
        "//pkg/orchestration/wiring:go_default_library",
        "//pkg/orchestration/wiring/legacy:go_default_library",
        "//pkg/orchestration/wiring/registry:go_default_library",
        "//pkg/orchestration/wiring/wiringplugin:go_default_library",
        "//pkg/util/testutil:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/apis/smith/v1:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/clock:go_default_library",
    ],
)
