load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "admission.go",
        "controller.go",
        "controller_constructor.go",
    ],
    importpath = "github.com/atlassian/voyager/pkg/replication",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/admission:go_default_library",
        "//pkg/apis/composition:go_default_library",
        "//pkg/apis/composition/v1:go_default_library",
        "//pkg/composition:go_default_library",
        "//pkg/composition/client:go_default_library",
        "//pkg/composition/informer:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/sets:go_default_library",
        "//pkg/util/validation:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/handlers:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/specchecker:go_default_library",
        "//vendor/github.com/atlassian/smith/pkg/store:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/go-openapi/validate:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/admission/v1beta1:go_default_library",
        "//vendor/k8s.io/api/authorization/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apiserver/validation:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/sets:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/authorization/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "admission_authz_test.go",
        "admission_test.go",
        "controller_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//:go_default_library",
        "//pkg/apis/composition:go_default_library",
        "//pkg/apis/composition/v1:go_default_library",
        "//pkg/composition/client/fake:go_default_library",
        "//pkg/composition/informer:go_default_library",
        "//pkg/k8s:go_default_library",
        "//pkg/k8s/testing:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/sets:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/go.uber.org/zap/zaptest:go_default_library",
        "//vendor/k8s.io/api/admission/v1beta1:go_default_library",
        "//vendor/k8s.io/api/authentication/v1:go_default_library",
        "//vendor/k8s.io/api/authorization/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
